<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="396dp"
        android:layout_height="559dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="392dp"
            android:layout_height="532dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/register_button"
                android:layout_width="111dp"
                android:layout_height="59dp"
                android:layout_marginStart="152dp"
                android:layout_marginEnd="148dp"
                android:layout_marginBottom="56dp"
                android:background="@drawable/round_button"
                android:text="Create!"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/user_name_edit"
                android:layout_width="346dp"
                android:layout_height="49dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#FFFFFF"
                android:textColor="#ffffff"
                android:hint="@string/userNameHint"
                app:layout_constraintBottom_toTopOf="@+id/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.232" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="295dp"
                android:layout_marginBottom="24dp"
                android:text="Gender"
                android:textColor="#ffffff"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="268dp"
                android:text="Username"
                android:textColor="#ffffff"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/user_name_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="272dp"
                android:layout_marginEnd="289dp"
                android:text="Birthdate"
                android:textColor="#ffffff"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="394dp"
                android:layout_height="39dp"
                android:layout_marginTop="200dp"
                app:layout_constraintBottom_toTopOf="@+id/birth_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="256dp"
                    android:buttonTint="#FFFFFF"
                    android:text="Female"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="83dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="107dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="65dp"
                    android:buttonTint="#FFFFFF"
                    android:text="Male"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/female"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="19dp"
                app:layout_constraintBottom_toTopOf="@+id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birth_date">

                <EditText
                    android:id="@+id/date_dd"
                    android:layout_width="87dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="7dp"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="dd"
                    android:inputType="date"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/date_mm"
                    android:layout_width="82dp"
                    android:layout_height="58dp"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="mm"
                    android:inputType="date"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/date_split2"
                    app:layout_constraintStart_toEndOf="@+id/date_split1"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/date_yy"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="87dp"
                    android:layout_height="57dp"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="yyyy"
                    android:inputType="date"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_split2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.533" />

                <TextView
                    android:id="@+id/date_split1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/date_mm"
                    app:layout_constraintStart_toEndOf="@+id/date_dd"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.516" />

                <TextView
                    android:id="@+id/date_split2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/date_yy"
                    app:layout_constraintStart_toEndOf="@+id/date_mm"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:tint="#34FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
